--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,10 @@
 .App {
   text-align: center;
 }
-.card-container
-{
-  grid-template-columns: repeat(3, 1fr);
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px; 
 }
+
 
